# rubidium-c

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  TODO.md
.github/workflows/: ci.yml
cmake/: compilers.cmake  deploy.cmake  features.cmake  sanitizers.cmake  system.cmake
src/: CMakeLists.txt  RbCConfig.cmake.in  main.c
src/rbc/: CMakeLists.txt  version.h.in
src/rbc/containers/: array.c  array.h  macros.h  package.h  vector.h
src/rbc/containers/test/: vector.cpp
src/rbc/core/: assert.c  assert.h  attributes.h  bits.h  builtins.h  compiler.h  endian.h  error.c  error.h  export.h  extern.h  features.h  helpers.h  keywords.h  limits.h  macros.h  os.h  package.h  processor.h  sanitizers.c  sanitizers.h  source_location.c  source_location.h  types.h  version.c  version.h
src/rbc/core/test/: source_location.cpp
src/rbc/proto/dcp2/: packet.c  packet.h
src/rbc/sync/: CMakeLists.txt  annotations.h  barrier.c  barrier.h  common.h  cond_var.c  cond_var.h  condition_mutex.c  condition_mutex.h  impl.h  lock_guard.h  mutex.c  mutex.h  once.c  once.h  package.h  recursive_mutex.c  recursive_mutex.h  semaphore.c  semaphore.h  shared_mutex.c  shared_mutex.h  spinlock.c  spinlock.h  thread.c  thread.h  tls.c  tls.h
src/rbc/time/: duration.c  duration.h  package.h  time.c  time.h  timespec.c  timespec.h
src/rbc/utils/: charconv.c  charconv.h  package.h  swap.h
src/rbc/utils/test/: charconv.cpp
tests/: CMakeLists.txt  main.cpp
